infra/k8s/recipe-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: recipe-postgres
  name: recipe-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-postgres
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: recipe-postgres
    spec:
      containers:
        - name: recipe-postgres
          image: postgres
          resources: {}
status: {}
