infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-mongo
    project: recipe
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
      project: recipe
  strategy: {}
  template:
    metadata:
      labels:
        app: auth-mongo
        project: recipe
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-mongo
  name: auth-mongo-service
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: auth-mongo
  type: ClusterIP
