infra/k8s/auth-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    skaffold.dev/run-id: e09da58c-ed62-4803-a8ff-25700e2e19b9
  name: auth-mongo-service
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: auth-mongo
  type: ClusterIP
status:
  loadBalancer: {}
