infra/k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    skaffold.dev/run-id: e09da58c-ed62-4803-a8ff-25700e2e19b9
  name: auth-srv
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: auth
  type: ClusterIP
status:
  loadBalancer: {}
