infra/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: recipe-client
  name: recipe-client-service
spec:
  ports:
    - name: client
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: recipe-client
  type: ClusterIP
status:
  loadBalancer: {}
