infra/k8s/recipe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recipe
  name: recipe-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe
  template:
    metadata:
      labels:
        app: recipe
    spec:
      containers:
        - image: gabeodame/recipe-backend:1.0.0
          name: recipe
          env: # This line is correctly indented now
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: recipe-postgres-secret
                  key: database-url
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recipe
  name: recipe-service
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: recipe
  type: ClusterIP
