infra/k8s/recipe-postgres1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: recipe
  labels:
    app: recipe-postgres
  name: recipe-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-postgres
  template:
    metadata:
      labels:
        app: recipe-postgres
    spec:
      containers:
        - image: postgres
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  namespace: recipe
  labels:
    app: recipe-postgres
  name: recipe-postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: recipe-postgres
